[package]
name = "m68000"
version = "0.1.0"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"
description = "A Motorola 68000 assembler, disassembler and interpreter"
repository = "https://github.com/Stovent/m68000"
keywords = ["motorola", "68000", "m68k", "interpreter"]
categories = ["compilers", "emulators"]

[[bin]]
name = "decoder"
path = "src/bin/decoder.rs"
edition = "2021"

[profile.dev]
overflow-checks = false

[profile.release]
lto = true
