[package]
name = "m68000-ffi"
version = "0.1.1"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m68000 = { path = "../m68000", version = "0.1.1" }

[lib]
crate-type = ["staticlib"]
