[package]
name = "m68000-ffi"
version = "0.2.1"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2021"
readme = "../CINTERFACE.md"
license = "MPL-2.0"
description = "m68000 FFI bindings."
repository = "https://github.com/Stovent/m68000"
keywords = ["motorola", "68000", "m68k", "interpreter", "emulator"]
categories = ["compilers", "emulators"]

[dependencies]
m68000 = { path = "../m68000", features = ["ffi"] }
paste = "1.0"

[lib]
crate-type = ["staticlib"]
