[package]
name = "m68000"
version = "0.2.0"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A Motorola 68000 interpreter, disassembler and assembler (code emitter)"
repository = "https://github.com/Stovent/m68000"
keywords = ["motorola", "68000", "m68k", "interpreter", "emulator"]
categories = ["compilers", "emulators"]

[features]
default = []
ffi = []

[lib]
crate-type = ["lib", "staticlib"]
